--- a/home/wiki/App/Wiki_types/Wikia.com.html
+++ b/home/wiki/App/Wiki_types/Wikia.com.html
@@ -73,7 +73,7 @@
     </h2>
     <ul>
       <li>
-        Navigate to <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_2" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
+        Navigate to <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_2" title="Dashboard/Import/Offline">Dashboard/Import/Offline</a>
       </li>
       <li>
         Change the "Wiki" choice from "Wikipedia" to "Other wiki"
