--- a/home/wiki/Change_log/v3.8.5.1.html
+++ b/home/wiki/Change_log/v3.8.5.1.html
@@ -187,7 +187,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_4" title="Options/Import" class="xowa-visited">Options/Import</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_4" title="Options/Import">Options/Import</a>
       </dd>
     </dl>
     <ul>
