--- a/home/wiki/Dashboard/Import/Offline.html
+++ b/home/wiki/Dashboard/Import/Offline.html
@@ -927,7 +927,7 @@
       </p>
       <ul>
         <li>
-          Review the storage format options at <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_3" title="Options/Import" class="xowa-visited">Options/Import</a>
+          Review the storage format options at <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_3" title="Options/Import">Options/Import</a>
         </li>
         <li>
           Choose the wiki you wish to install.
@@ -1052,7 +1052,7 @@
       </h4>
       <ul>
         <li>
-          Review the storage format options at <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_5" title="Options/Import" class="xowa-visited">Options/Import</a>
+          Review the storage format options at <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_5" title="Options/Import">Options/Import</a>
         </li>
         <li>
           Choose the wiki you wish to install. 
