--- a/home/wiki/Dev/File/Setup/Linux.html
+++ b/home/wiki/Dev/File/Setup/Linux.html
@@ -79,7 +79,7 @@ sudo apt-get install inkscape
     </h3>
     <ul>
       <li>
-        Navigate to <a href="http://xowa.org/home/wiki/Options.html" id="xolnki_3" title="Options" class="xowa-visited">Options</a> and check "Download enabled"
+        Navigate to <a href="http://xowa.org/home/wiki/Options.html" id="xolnki_3" title="Options">Options</a> and check "Download enabled"
       </li>
       <li>
         Restart XOWA and navigate to any page. Any images will be downloaded automatically.
