--- a/home/wiki/Diagnostics.html
+++ b/home/wiki/Diagnostics.html
@@ -86,7 +86,7 @@
     </h2>
     <ul>
       <li>
-        <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/All.html" id="xolnki_16" title="Diagnostics/Scribunto/All" class="xowa-visited">Diagnostics/Scribunto/All</a> 
+        <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/All.html" id="xolnki_16" title="Diagnostics/Scribunto/All">Diagnostics/Scribunto/All</a> 
         <ul>
           <li>
             <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/Basic.html" id="xolnki_17" title="Diagnostics/Scribunto/Basic">Diagnostics/Scribunto/Basic</a>
@@ -122,7 +122,7 @@
             <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/WikibaseLibrary.html" id="xolnki_27" title="Diagnostics/Scribunto/WikibaseLibrary">Diagnostics/Scribunto/WikibaseLibrary</a>
           </li>
           <li>
-            <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/Luaj.html" id="xolnki_28" title="Diagnostics/Scribunto/Luaj" class="xowa-visited">Diagnostics/Scribunto/Luaj</a>
+            <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/Luaj.html" id="xolnki_28" title="Diagnostics/Scribunto/Luaj">Diagnostics/Scribunto/Luaj</a>
           </li>
           <li>
             <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/TitleBlacklist.html" id="xolnki_29" title="Diagnostics/Scribunto/TitleBlacklist">Diagnostics/Scribunto/TitleBlacklist</a>
