--- a/home/wiki/Help/Features/Search/Build.html
+++ b/home/wiki/Help/Features/Search/Build.html
@@ -172,7 +172,7 @@
     </p>
     <ul>
       <li>
-        Go to <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_5" title="Options/Import" class="xowa-visited">Options/Import</a>
+        Go to <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_5" title="Options/Import">Options/Import</a>
       </li>
       <li>
         Change "PageRank iteration count" to 0
