--- a/home/wiki/Main_Page.html
+++ b/home/wiki/Main_Page.html
@@ -116,7 +116,7 @@
       </li>
     </ul>
     <p>
-      For more details about this release, please see the <a href="http://xowa.org/home/wiki/Blog.html" id="xolnki_3" title="Blog">blog</a> and the <a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_4" title="Change log" class="xowa-visited">change log</a>.
+      For more details about this release, please see the <a href="http://xowa.org/home/wiki/Blog.html" id="xolnki_3" title="Blog">blog</a> and the <a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_4" title="Change log">change log</a>.
     </p>
     <p>
       For more details about the release schedule, please see <a href="http://xowa.org/home/wiki/Help/Release_schedule.html" id="xolnki_5" title="Help/Release schedule">the release schedule</a>.
@@ -151,7 +151,7 @@
         </dl>
       </dd>
       <dd>
-        Feel free to look around during the import process. You can start at <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_6" title="Help/Contents" class="xowa-visited">Help/Contents</a>. When the process completes, it will open Simple Wikipedia.
+        Feel free to look around during the import process. You can start at <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_6" title="Help/Contents">Help/Contents</a>. When the process completes, it will open Simple Wikipedia.
       </dd>
     </dl>
     <dl>
@@ -183,7 +183,7 @@
         After exploring Simple Wikipedia, you may want to import another wiki such as English Wikipedia, French Wiktionary, German Wikisource, Wikidata, Commons, etc.
       </dd>
       <dd>
-        To import another wiki, please visit <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_11" title="Dashboard/Import/Online" class="xowa-visited">import online</a>.
+        To import another wiki, please visit <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_11" title="Dashboard/Import/Online">import online</a>.
       </dd>
     </dl>
     <h5>
@@ -192,7 +192,7 @@
     <hr>
     <ul>
       <li>
-        <b>Import from a dump file</b>: See <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_12" title="Dashboard/Import/Offline" class="xowa-visited">import offline</a>.
+        <b>Import from a dump file</b>: See <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_12" title="Dashboard/Import/Offline">import offline</a>.
       </li>
     </ul>
     <h2>
@@ -206,7 +206,7 @@
         v3.9.2 features a new Category system. See <a href="http://xowa.org/home/wiki/App/Category.html" id="xolnki_13" title="App/Category">Category Overview</a>
       </li>
       <li>
-        v3.6.3 features a Download page. See <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_14" title="Special:XowaDownloadCentral" class="xowa-visited">Download Central</a>
+        v3.6.3 features a Download page. See <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_14" title="Special:XowaDownloadCentral">Download Central</a>
       </li>
       <li>
         v3.3.4 features an auto-complete address bar. It also has a faster Search system. See <a href="http://xowa.org/home/wiki/App/Search.html" id="xolnki_15" title="App/Search">App/Search</a>
@@ -225,7 +225,7 @@
         v2.8.1 has a language converter dropdown for the Chinese wikis.
       </li>
       <li>
-        v2.7.3 introduces a new Bookmarks page. See <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_16" title="Special:XowaBookmarks" class="xowa-visited">Special:XowaBookmarks</a>
+        v2.7.3 introduces a new Bookmarks page. See <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_16" title="Special:XowaBookmarks">Special:XowaBookmarks</a>
       </li>
       <li>
         v2.6.5 uses SWT v4.5 and XULRunner v24. See <a href="http://xowa.org/home/wiki/Dev/SWT.html" id="xolnki_17" title="Dev/SWT">Dev/SWT</a> and <a href="http://xowa.org/home/wiki/App/UI/HTML_Browser.html" id="xolnki_18" title="App/UI/HTML Browser">HTML Browser</a>
@@ -303,7 +303,7 @@
     </dl>
     <ul>
       <li>
-        <b>Middle-click on link</b>: Open a tab in a new link by middle-clicking on it. Try middle-clicking the following: <a href="http://xowa.org/home/wiki/Options.html" id="xolnki_28" title="Options" class="xowa-visited">Options</a>
+        <b>Middle-click on link</b>: Open a tab in a new link by middle-clicking on it. Try middle-clicking the following: <a href="http://xowa.org/home/wiki/Options.html" id="xolnki_28" title="Options">Options</a>
       </li>
       <li>
         <b>Right-click</b>: Right click on an image and click save as file
@@ -323,7 +323,7 @@
     <table class="wikitable">
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_30" title="Special:XowaDownloadCentral" class="xowa-visited">Download Central</a>
+          <a href="http://xowa.org/home/wiki/Special:XowaDownloadCentral.html" id="xolnki_30" title="Special:XowaDownloadCentral">Download Central</a>
         </td>
         <td>
           Download an Android-ready wiki with images from archive.org
@@ -331,7 +331,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_31" title="Dashboard/Import/Online" class="xowa-visited">Import Online</a>
+          <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_31" title="Dashboard/Import/Online">Import Online</a>
         </td>
         <td>
           Import a wiki from a list of 826 known Wikimedia Foundation wikis
@@ -339,7 +339,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_32" title="Dashboard/Import/Offline" class="xowa-visited">Import Offline</a>
+          <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_32" title="Dashboard/Import/Offline">Import Offline</a>
         </td>
         <td>
           Import a wiki through a dump; import also through script; also upgrade category to version 2
@@ -371,7 +371,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_36" title="Help/Contents" class="xowa-visited">Contents</a>
+          <a href="http://xowa.org/home/wiki/Help/Contents.html" id="xolnki_36" title="Help/Contents">Contents</a>
         </td>
         <td>
           View all help topics
@@ -379,7 +379,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Options.html" id="xolnki_37" title="Options" class="xowa-visited">Options</a>
+          <a href="http://xowa.org/home/wiki/Options.html" id="xolnki_37" title="Options">Options</a>
         </td>
         <td>
           Configure XOWA options
@@ -387,7 +387,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_38" title="Change log" class="xowa-visited">Change log</a>
+          <a href="http://xowa.org/home/wiki/Change_log.html" id="xolnki_38" title="Change log">Change log</a>
         </td>
         <td>
           View changes for each XOWA release
@@ -395,7 +395,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Diagnostics.html" id="xolnki_39" title="Diagnostics" class="xowa-visited">Diagnostics</a>
+          <a href="http://xowa.org/home/wiki/Diagnostics.html" id="xolnki_39" title="Diagnostics">Diagnostics</a>
         </td>
         <td>
           Run test pages to make sure that XOWA works on your system.
