--- a/home/wiki/Options.html
+++ b/home/wiki/Options.html
@@ -365,7 +365,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_7" title="Options/Shortcuts" class="xowa-visited">Shortcuts</a>
+              <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_7" title="Options/Shortcuts">Shortcuts</a>
             </td>
             <td>
               Keyboard shortcuts
@@ -394,7 +394,7 @@ li.active a, li.active a:hover
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_10" title="Options/Import" class="xowa-visited">Import</a>
+              <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_10" title="Options/Import">Import</a>
             </td>
             <td>
               Import options
@@ -492,7 +492,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/HTTP_server.html" id="xolnki_21" title="Options/HTTP server" class="xowa-visited">HTTP Server</a>
+              <a href="http://xowa.org/home/wiki/Options/HTTP_server.html" id="xolnki_21" title="Options/HTTP server">HTTP Server</a>
             </td>
             <td>
               HTTP Server: Run XOWA as an HTTP Server
@@ -505,7 +505,7 @@ li.active a, li.active a:hover
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_22" title="Options/Search suggest" class="xowa-visited">Search suggest</a>
+              <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_22" title="Options/Search suggest">Search suggest</a>
             </td>
             <td>
               Search suggest options (controls behavior in the search box)
@@ -534,7 +534,7 @@ li.active a, li.active a:hover
         <table class='options_table'>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Math.html" id="xolnki_25" title="Options/Math" class="xowa-visited">Math</a>
+              <a href="http://xowa.org/home/wiki/Options/Math.html" id="xolnki_25" title="Options/Math">Math</a>
             </td>
             <td>
               Math options (text called in an {{#math}} statement)
@@ -542,7 +542,7 @@ li.active a, li.active a:hover
           </tr>
           <tr>
             <td class='options_row_label'>
-              <a href="http://xowa.org/home/wiki/Options/Scribunto.html" id="xolnki_26" title="Options/Scribunto" class="xowa-visited">Scribunto</a>
+              <a href="http://xowa.org/home/wiki/Options/Scribunto.html" id="xolnki_26" title="Options/Scribunto">Scribunto</a>
             </td>
             <td>
               Scribunto/Lua options (text called in an {{#invoke}} statement)
