--- a/home/wiki/Options/Category.html
+++ b/home/wiki/Options/Category.html
@@ -307,7 +307,7 @@ li.active a, li.active a:hover
               Missing category appearance: <sup id="cite_ref-missing_ctg_cls_0-0" class="reference"><a href="#cite_note-missing_ctg_cls-0">[1]</a></sup>
             </td>
             <td>
-              <select xowa_prop="app.ctg_mgr.missing_ctg_cls" xowa_prop_list="app.ctg_mgr.missing_ctg_cls_list" size="3" class="options_select" id='xowa_prop_0'>
+              <select xowa_prop="app.ctg_mgr.missing_ctg_cls" xowa_prop_list="app.ctg_mgr.missing_ctg_cls_list" size="3" class="options_select" accesskey="d" id='xowa_prop_0'>
                 <option value='normal'>
                   normal
                 </option>
@@ -325,7 +325,7 @@ li.active a, li.active a:hover
               Page categories grouping enabled: <sup id="cite_ref-pagecats_grouping_enabled_1-0" class="reference"><a href="#cite_note-pagecats_grouping_enabled-1">[2]</a></sup>
             </td>
             <td>
-              <input xowa_prop="xowa.api.addon.wikis__ctgs__hidden_enabled" type='checkbox' class="options_chkbox" id='xowa_prop_1'>
+              <input xowa_prop="xowa.api.addon.wikis__ctgs__hidden_enabled" type='checkbox' class="options_chkbox" id='xowa_prop_1' checked='checked'>
             </td>
           </tr>
         </table>
