--- a/home/wiki/Options/Page_sync.html
+++ b/home/wiki/Options/Page_sync.html
@@ -302,7 +302,7 @@ li.active a, li.active a:hover
         </div><br>
          
         <p>
-          For more information, see <a href="http://xowa.org/home/wiki/App/Xtn/Page_sync.html" id="xolnki_2" title="App/Xtn/Page sync" class="xowa-visited">the page sync help page</a>
+          For more information, see <a href="http://xowa.org/home/wiki/App/Xtn/Page_sync.html" id="xolnki_2" title="App/Xtn/Page sync">the page sync help page</a>
         </p>
         <h2>
           <span class="mw-headline" id="Manual">Manual</span>
