--- a/home/wiki/Options/Popups.html
+++ b/home/wiki/Options/Popups.html
@@ -302,7 +302,7 @@ li.active a, li.active a:hover
           This page provides options for Popups. Note that configuration changes will apply automatically to new tabs and new pages. However, any currently loaded pages must be reloaded to pick up the new configuration change.
         </p>
         <p>
-          You can also test your configuration changes by hovering over this link: <a href="http://xowa.org/home/wiki/Main_Page.html" id="xolnki_2" title="Main Page" class="xowa-visited">XOWA Main Page</a>.
+          You can also test your configuration changes by hovering over this link: <a href="http://xowa.org/home/wiki/Main_Page.html" id="xolnki_2" title="Main Page">XOWA Main Page</a>.
         </p>
         <p>
           For more infomation, visit the <a href="http://xowa.org/home/wiki/App/Xtn/Html/Popups.html" id="xolnki_3" title="App/Xtn/Html/Popups">Popups help page</a>
