--- a/home/wiki/Change_log/2013.html
+++ b/home/wiki/Change_log/2013.html
@@ -386,7 +386,7 @@
     </p>
     <ul>
       <li>
-        (fix) Import: species.wikimedia.org had wrong domain name; EX:species.wikispecies.org {detected by Miles}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_5" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
+        (fix) Import: species.wikimedia.org had wrong domain name; EX:species.wikispecies.org {detected by Miles}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_5" title="Dashboard/Import/Offline">Dashboard/Import/Offline</a>
       </li>
       <li>
         (change) Parser: Category should not show in TOC; EX:== a [[Category:b]] ==. See: <a href="http://en.wikipedia.org/wiki/Tamil_Nadu" rel="nofollow" class="external free">http://en.wikipedia.org/wiki/Tamil_Nadu</a>
@@ -445,7 +445,7 @@
     </p>
     <ul>
       <li>
-        (add) Search: Added search suggest v2 for more accurate results {requested by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_7" title="Options/Search suggest" class="xowa-visited">Options/Search_suggest</a>
+        (add) Search: Added search suggest v2 for more accurate results {requested by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_7" title="Options/Search suggest">Options/Search_suggest</a>
       </li>
       <li>
         (add) Scribunto: Fixed "Citation needed" for 2013-12-04 English Wikipedia; EX:mw.isSubsting. See: <a href="http://en.wikipedia.org/wiki/Albedo" rel="nofollow" class="external free">http://en.wikipedia.org/wiki/Albedo</a>
@@ -454,7 +454,7 @@
         (add) Html: Embed file name / width / height in HTML.
       </li>
       <li>
-        (add) Server: Added alpha HTTP server {contributed by Mattze96 }. See: <a href="http://xowa.org/home/wiki/App/Xtn/Browser/HTTP_Server.html" id="xolnki_8" title="App/Xtn/Browser/HTTP Server" class="xowa-visited">App/Xtn/Browser/HTTP_Server</a>
+        (add) Server: Added alpha HTTP server {contributed by Mattze96 }. See: <a href="http://xowa.org/home/wiki/App/Xtn/Browser/HTTP_Server.html" id="xolnki_8" title="App/Xtn/Browser/HTTP Server">App/Xtn/Browser/HTTP_Server</a>
       </li>
       <li>
         (add) Translation: Added translations for Simplified Chinese and Traditional Chinese {contributed by zjzengdongyang}. See: <a href="http://xowa.org/home/wiki/Options/Language.html" id="xolnki_9" title="Options/Language">Options/Language</a>
@@ -576,7 +576,7 @@
     </p>
     <ul>
       <li>
-        (add) Torrents for English Wikipedia images.. See <a href="http://xowa.org/home/wiki/App/Import/English_Wikipedia.html" id="xolnki_12" title="App/Import/English Wikipedia" class="xowa-visited">App/Import/English_Wikipedia</a> and <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_13" title="Dashboard/Image databases">Dashboard/Image_databases</a>
+        (add) Torrents for English Wikipedia images.. See <a href="http://xowa.org/home/wiki/App/Import/English_Wikipedia.html" id="xolnki_12" title="App/Import/English Wikipedia">App/Import/English_Wikipedia</a> and <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_13" title="Dashboard/Image databases">Dashboard/Image_databases</a>
       </li>
       <li>
         (fix) [broken since:v0.4.4] Xnde: Incorrect parsing of xml attributes with embedded apostrophe / quote; EX:a = "b'c" -&gt; a = "bc". See: <a href="http://en.wikisource.org/wiki/Alice's_Adventures_in_Wonderland" rel="nofollow" class="external free">http://en.wikisource.org/wiki/Alice's_Adventures_in_Wonderland</a>
@@ -800,7 +800,7 @@
         (done) Search: Search allows manually specifying additional namespaces.
       </li>
       <li>
-        (done) Search: Search allows default url arguments; EX:ns0=1&amp;ns14=1. See: <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_16" title="Options/Search suggest" class="xowa-visited">Options/Search_suggest</a>
+        (done) Search: Search allows default url arguments; EX:ns0=1&amp;ns14=1. See: <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_16" title="Options/Search suggest">Options/Search_suggest</a>
       </li>
       <li>
         (fix) [broken since:v0.7.3] Import: Import fails if data_storage_format is not .gz.
@@ -937,7 +937,7 @@
     </p>
     <ul>
       <li>
-        (add) Search: Sqlite search now has word index database (gui). See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_18" title="Options/Import" class="xowa-visited">Options/Import</a>
+        (add) Search: Sqlite search now has word index database (gui). See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_18" title="Options/Import">Options/Import</a>
       </li>
     </ul>
     <p>
@@ -1167,10 +1167,10 @@
         (add) Addon: Wikidata JSON formatter works for addon.
       </li>
       <li>
-        (add) Search: Search now has auto-wildcard option; EX:Earth -&gt; Earth* {requested by hidp123}. See: <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_23" title="Options/Search suggest" class="xowa-visited">Options/Search_suggest</a>
+        (add) Search: Search now has auto-wildcard option; EX:Earth -&gt; Earth* {requested by hidp123}. See: <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_23" title="Options/Search suggest">Options/Search_suggest</a>
       </li>
       <li>
-        (add) Import: Option to not automatically delete xml file after import {requested by hidp123}. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_24" title="Options/Import" class="xowa-visited">Options/Import</a>
+        (add) Import: Option to not automatically delete xml file after import {requested by hidp123}. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_24" title="Options/Import">Options/Import</a>
       </li>
     </ul>
     <h2>
@@ -1216,7 +1216,7 @@
         (done) Menu: Added View commands for page_read, page_edit, page_html {requested by hidp123}.
       </li>
       <li>
-        (done) Options: "Clear customized options" link added {requested by hidp123}. See: <a href="http://xowa.org/home/wiki/Options.html" id="xolnki_26" title="Options" class="xowa-visited">Options</a>
+        (done) Options: "Clear customized options" link added {requested by hidp123}. See: <a href="http://xowa.org/home/wiki/Options.html" id="xolnki_26" title="Options">Options</a>
       </li>
       <li>
         (done) Offline files: Builder now generates a list of all thumbs to be downloaded. See: <a href="http://xowa.org/home/wiki/Dev/Design/Offline_files.html" id="xolnki_27" title="Dev/Design/Offline files">Dev/Design/Offline_files</a>
@@ -1392,7 +1392,7 @@
         (fix) References: Follow attribute should be supported {detected by Schnark}. See: <a href="http://de.wikisource.org/wiki/Die_Trunksucht" rel="nofollow" class="external free">http://de.wikisource.org/wiki/Die_Trunksucht</a>
       </li>
       <li>
-        (fix) Css: xowa_commons.css should not be downloaded {assisted by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_32" title="Options/Import" class="xowa-visited">Options/Import</a>
+        (fix) Css: xowa_commons.css should not be downloaded {assisted by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_32" title="Options/Import">Options/Import</a>
       </li>
       <li>
         (fix) Import: Total article count should not include redirects for sqlite.
@@ -1491,13 +1491,13 @@
     </p>
     <ul>
       <li>
-        (add) Import: Sqlite database import available through UI. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_33" title="Options/Import" class="xowa-visited">Options/Import</a>
+        (add) Import: Sqlite database import available through UI. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_33" title="Options/Import">Options/Import</a>
       </li>
       <li>
         (add) Wikidata: Lua Wikibase support added. See: <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/WikibaseLibrary.html" id="xolnki_34" title="Diagnostics/Scribunto/WikibaseLibrary">Diagnostics/Scribunto/WikibaseLibrary</a>
       </li>
       <li>
-        (add) Import: Wikiquote wikis added to Import/List. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_35" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a>
+        (add) Import: Wikiquote wikis added to Import/List. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_35" title="Dashboard/Import/Online">Dashboard/Import/Online</a>
       </li>
       <li>
         (fix) Import: Import failed to "read from file" if wiki.unzip was present.
@@ -1688,10 +1688,10 @@
         (fix) Search: Search broken when not using search suggestions {detected by hidp123;anonymous7}.
       </li>
       <li>
-        (add) Search: Search now supports AllPages mode {requested by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_38" title="Options/Search suggest" class="xowa-visited">Options/Search_suggest</a>
+        (add) Search: Search now supports AllPages mode {requested by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_38" title="Options/Search suggest">Options/Search_suggest</a>
       </li>
       <li>
-        (add) Import: Import/Script redesigned to be more intuitive {contributed by Schnark}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_39" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
+        (add) Import: Import/Script redesigned to be more intuitive {contributed by Schnark}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_39" title="Dashboard/Import/Offline">Dashboard/Import/Offline</a>
       </li>
     </ul>
     <p>
@@ -1734,7 +1734,7 @@
     </p>
     <ul>
       <li>
-        (add) Search: Dynamic search suggestions; EX:Go to search box and start typing "e" "a" "r" "t" "h" {contributed by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_40" title="Options/Search suggest" class="xowa-visited">Options/Search_suggest</a>
+        (add) Search: Dynamic search suggestions; EX:Go to search box and start typing "e" "a" "r" "t" "h" {contributed by Schnark}. See: <a href="http://xowa.org/home/wiki/Options/Search_suggest.html" id="xolnki_40" title="Options/Search suggest">Options/Search_suggest</a>
       </li>
       <li>
         (fix) Xtn/Lst: Lst handles recursive {{#lst}} calls; EX:http://it.wikisource.org {detected by Joe Webber}. See: <a href="http://it.wikisource.org" rel="nofollow" class="external free">http://it.wikisource.org</a>
@@ -1811,7 +1811,7 @@
     </p>
     <ul>
       <li>
-        (add) Import: pages now save directly to compressed format (.gz) {requested by Miles}. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_41" title="Options/Import" class="xowa-visited">Options/Import</a>
+        (add) Import: pages now save directly to compressed format (.gz) {requested by Miles}. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_41" title="Options/Import">Options/Import</a>
       </li>
     </ul>
     <p>
@@ -1822,7 +1822,7 @@
         (add) Timeline: Tabs in text data supported; EX:http://de.wikipedia.org/wiki/Hilfe:Zeitleisten#TextData {contributed by Schnark}.
       </li>
       <li>
-        (add) Import: allow GUI selection of data dump file {requested by hidp123;Karimoune}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_42" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
+        (add) Import: allow GUI selection of data dump file {requested by hidp123;Karimoune}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_42" title="Dashboard/Import/Offline">Dashboard/Import/Offline</a>
       </li>
       <li>
         (add) Import: if offline and importing new wiki, automatically copy home wiki's /html/ directory.
@@ -1860,7 +1860,7 @@
         (add) Search syntax supports AND, OR, quotes; EX:http://en.wikipedia.org/wiki/Special:Search/Earth_AND_History?fulltext=y&amp;search=Earth+AND+History {requested by Schnark}. See <a href="http://xowa.org/home/wiki/App/Search.html" id="xolnki_46" title="App/Search">App/Search</a>
       </li>
       <li>
-        (add) Version 2 category upgrade can be done through UI. See <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_47" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a> and <a href="http://xowa.org/home/wiki/Help:Core/Category/V2/Setup.html" id="xolnki_48" title="Help:Core/Category/V2/Setup">Help:Core/Category/V2/Setup</a>
+        (add) Version 2 category upgrade can be done through UI. See <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_47" title="Dashboard/Import/Offline">Dashboard/Import/Offline</a> and <a href="http://xowa.org/home/wiki/Help:Core/Category/V2/Setup.html" id="xolnki_48" title="Help:Core/Category/V2/Setup">Help:Core/Category/V2/Setup</a>
       </li>
       <li>
         (add) Wiki import can read directly from bz2; no need to unzip to xml {requested by Schark, Miles}. See <a href="http://xowa.org/home/wiki/Dev/Design/Data_dump_format.html" id="xolnki_49" title="Dev/Design/Data dump format">Dev/Design/Data_dump_format</a>
@@ -2016,7 +2016,7 @@
         (fix) syntaxhighlight and math tags should not allow raw javascript {detected by Schnark}
       </li>
       <li>
-        (add) Option to disable Javascript See <a href="http://xowa.org/home/wiki/Options.html" id="xolnki_51" title="Options" class="xowa-visited">Options</a>
+        (add) Option to disable Javascript See <a href="http://xowa.org/home/wiki/Options.html" id="xolnki_51" title="Options">Options</a>
       </li>
       <li>
         (add) Categories now display in MediaWiki format (Subcategories; Pages; Files); EX:http://en.wikipedia.org/wiki/Category:Terrestrial_planets {requested by Schnark}
@@ -2285,7 +2285,7 @@
         (add) Option for content application paths {requested by Miles} See <a href="http://xowa.org/home/wiki/Options/Apps.html" id="xolnki_55" title="Options/Apps">Options/Apps</a>
       </li>
       <li>
-        (add) Option for data dump imports, including automatic zipping {requested by hidp123;Miles} See <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_56" title="Options/Import" class="xowa-visited">Options/Import</a>
+        (add) Option for data dump imports, including automatic zipping {requested by hidp123;Miles} See <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_56" title="Options/Import">Options/Import</a>
       </li>
     </ul>
     <p>
@@ -2327,7 +2327,7 @@
     </p>
     <ul>
       <li>
-        (add) Preliminary support for Scribunto/Lua. See <a href="http://xowa.org/home/wiki/Options/Scribunto.html" id="xolnki_57" title="Options/Scribunto" class="xowa-visited">Options/Scribunto</a>
+        (add) Preliminary support for Scribunto/Lua. See <a href="http://xowa.org/home/wiki/Options/Scribunto.html" id="xolnki_57" title="Options/Scribunto">Options/Scribunto</a>
       </li>
       <li>
         (add) Improvements to Schnark's Javascript Timeline {contributed by Schnark}
