--- a/home/wiki/Change_log/2015.html
+++ b/home/wiki/Change_log/2015.html
@@ -1008,7 +1008,7 @@
     </p>
     <ul>
       <li>
-        Import: Fix broken urls for wikimedia wikis (affects 7 wikimedia dumps not importing) {detected by cd19s}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_13" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a> <a href="https://ar.wikimedia.org" rel="nofollow" class="external free">https://ar.wikimedia.org</a> <a href="https://ca.wikimedia.org" rel="nofollow" class="external free">https://ca.wikimedia.org</a> <a href="https://be.wikimedia.org" rel="nofollow" class="external free">https://be.wikimedia.org</a> <a href="https://uk.wikimedia.org" rel="nofollow" class="external free">https://uk.wikimedia.org</a> <a href="https://br.wikimedia.org" rel="nofollow" class="external free">https://br.wikimedia.org</a> <a href="https://co.wikimedia.org" rel="nofollow" class="external free">https://co.wikimedia.org</a> <a href="https://se.wikimedia.org" rel="nofollow" class="external free">https://se.wikimedia.org</a>
+        Import: Fix broken urls for wikimedia wikis (affects 7 wikimedia dumps not importing) {detected by cd19s}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_13" title="Dashboard/Import/Online">Dashboard/Import/Online</a> <a href="https://ar.wikimedia.org" rel="nofollow" class="external free">https://ar.wikimedia.org</a> <a href="https://ca.wikimedia.org" rel="nofollow" class="external free">https://ca.wikimedia.org</a> <a href="https://be.wikimedia.org" rel="nofollow" class="external free">https://be.wikimedia.org</a> <a href="https://uk.wikimedia.org" rel="nofollow" class="external free">https://uk.wikimedia.org</a> <a href="https://br.wikimedia.org" rel="nofollow" class="external free">https://br.wikimedia.org</a> <a href="https://co.wikimedia.org" rel="nofollow" class="external free">https://co.wikimedia.org</a> <a href="https://se.wikimedia.org" rel="nofollow" class="external free">https://se.wikimedia.org</a>
       </li>
       <li>
         File: Use thumb size when specified for videos, not original size (affects several video thumbnails showing with large size); EX:[[File:A.ogv|thumb]] -&gt; 220px x&gt; original_px. See: <a href="https://en.wikipedia.org/wiki/Edward_Snowden" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Edward_Snowden</a> <a href="https://en.wikipedia.org/wiki/Xinjiang" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Xinjiang</a> <a href="https://en.wikipedia.org/wiki/Alice_Brady" rel="nofollow" class="external free">https://en.wikipedia.org/wiki/Alice_Brady</a> [broken since:v2.8.2]
@@ -1416,7 +1416,7 @@
     </p>
     <ul>
       <li>
-        Import.Online: Fix import not using the most recent good dump (affects downloads occuring from your.org for partial dumps) {detected by Anselm}. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_19" title="Options/Import" class="xowa-visited">Options/Import</a> [broken since:v2.7.3.1]
+        Import.Online: Fix import not using the most recent good dump (affects downloads occuring from your.org for partial dumps) {detected by Anselm}. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_19" title="Options/Import">Options/Import</a> [broken since:v2.7.3.1]
       </li>
     </ul>
     <h2>
@@ -1427,7 +1427,7 @@
     </p>
     <ul>
       <li>
-        Special: Add new bookmarks page {assisted by anonymous4}. See: <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_20" title="Special:XowaBookmarks" class="xowa-visited">Special:XowaBookmarks</a>
+        Special: Add new bookmarks page {assisted by anonymous4}. See: <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_20" title="Special:XowaBookmarks">Special:XowaBookmarks</a>
       </li>
     </ul>
     <p>
@@ -1441,7 +1441,7 @@
         Edit: Fix missing edit-toolbar.js b/c of broken path {detected by gnosygnu.gui}. [broken since:v1.10.2]
       </li>
       <li>
-        Options: Fix "Page storage format" not working {detected by gnosygnu.gui}. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_21" title="Options/Import" class="xowa-visited">Options/Import</a> [broken since:v2.4.1]
+        Options: Fix "Page storage format" not working {detected by gnosygnu.gui}. See: <a href="http://xowa.org/home/wiki/Options/Import.html" id="xolnki_21" title="Options/Import">Options/Import</a> [broken since:v2.4.1]
       </li>
       <li>
         HttpServer: Fix wrong Main Page when clicking on wiki in sidebar; EX:click on zh.w in sidebar -&gt; Wikipedia:首页 x&gt; Main_Page {detected by anonymous4}. [broken since:v2.7.2]
@@ -1477,13 +1477,13 @@
         Javascript: Upgrade jquery from 1.83 to 1.11.3 (affects nothing known); EX:/xowa/bin/any/xowa/html/res/lib/jquery/jquery-ui-1.11.3.js.
       </li>
       <li>
-        Javascript: Add jquery-ui-1.11.4.js (affects drag-and-drop to reorder bookmarks); EX:/xowa/bin/any/xowa/html/res/lib/jquery-ui/jquery-ui-1.11.4.js. See: <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_22" title="Special:XowaBookmarks" class="xowa-visited">Special:XowaBookmarks</a>
+        Javascript: Add jquery-ui-1.11.4.js (affects drag-and-drop to reorder bookmarks); EX:/xowa/bin/any/xowa/html/res/lib/jquery-ui/jquery-ui-1.11.4.js. See: <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_22" title="Special:XowaBookmarks">Special:XowaBookmarks</a>
       </li>
       <li>
-        Javascript: Add notifyjs-0.3.1.js (affects notification messages when adding bookmarks); EX:/xowa/bin/any/xowa/html/res/lib/notifyjs/notifyjs-0.3.1.js. See: <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_23" title="Special:XowaBookmarks" class="xowa-visited">Special:XowaBookmarks</a>
+        Javascript: Add notifyjs-0.3.1.js (affects notification messages when adding bookmarks); EX:/xowa/bin/any/xowa/html/res/lib/notifyjs/notifyjs-0.3.1.js. See: <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_23" title="Special:XowaBookmarks">Special:XowaBookmarks</a>
       </li>
       <li>
-        Javascript: Add dbui-0.1.1.js (affects database changes for bookmarks); EX:/xowa/bin/any/xowa/html/res/src/xowa/dbui/dbui-0.1.1.js. See: <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_24" title="Special:XowaBookmarks" class="xowa-visited">Special:XowaBookmarks</a>
+        Javascript: Add dbui-0.1.1.js (affects database changes for bookmarks); EX:/xowa/bin/any/xowa/html/res/src/xowa/dbui/dbui-0.1.1.js. See: <a href="http://xowa.org/home/wiki/Special:XowaBookmarks.html" id="xolnki_24" title="Special:XowaBookmarks">Special:XowaBookmarks</a>
       </li>
       <li>
         Source: Refactor Console_adp classes.
@@ -1636,7 +1636,7 @@
     </p>
     <ul>
       <li>
-        Help: Remove "Setup ImageMagick / Inkscape" from Main_Page. See: <a href="http://xowa.org/home/wiki/Main_Page.html" id="xolnki_26" title="Main Page" class="xowa-visited">Main_Page</a>
+        Help: Remove "Setup ImageMagick / Inkscape" from Main_Page. See: <a href="http://xowa.org/home/wiki/Main_Page.html" id="xolnki_26" title="Main Page">Main_Page</a>
       </li>
       <li>
         Help: Add instructions for Maintaining wikis {detected by pirate}. See: <a href="http://xowa.org/home/wiki/App/Import/Maintenance.html" id="xolnki_27" title="App/Import/Maintenance">App/Import/Maintenance</a>
@@ -2086,7 +2086,7 @@
     </p>
     <ul>
       <li>
-        Options: Add Show keybinding {contributed by gnosygnu}. See: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_41" title="Options/Shortcuts" class="xowa-visited">Options/Shortcuts</a>
+        Options: Add Show keybinding {contributed by gnosygnu}. See: <a href="http://xowa.org/home/wiki/Options/Shortcuts.html" id="xolnki_41" title="Options/Shortcuts">Options/Shortcuts</a>
       </li>
     </ul>
     <p>
@@ -2272,7 +2272,7 @@
         Wikidata: Use correct namespace / title when looking up wikidata wikis (affects wikidata language links / properties not working for titles in non-canonical namespaces); EX:"Author:A" -&gt; 102,A x&gt; 0,Author:A {detected by anonymous}. See: <a href="https://pt.wikisource.org/wiki/Autor:Humberto_de_Campos" rel="nofollow" class="external free">https://pt.wikisource.org/wiki/Autor:Humberto_de_Campos</a> [broken since:v2.4.2]
       </li>
       <li>
-        doc: Fix wrong wiki name for Wikidata; EX:Wikidata x&gt; Walloon Wiktionary {detected by anonymous}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_45" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a> [broken since:v2.4.3]
+        doc: Fix wrong wiki name for Wikidata; EX:Wikidata x&gt; Walloon Wiktionary {detected by anonymous}. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_45" title="Dashboard/Import/Online">Dashboard/Import/Online</a> [broken since:v2.4.3]
       </li>
     </ul>
     <p>
@@ -2393,7 +2393,7 @@
         Language: Show messages for Wikidata codes (affects &lt;some-key&gt; showing up on Wikidata instead of "value"); EX:&lt;Wikibase-entity-item&gt; -&gt; "item" {detected by anonymous}. See: <a href="https://www.wikidata.org" rel="nofollow" class="external free">https://www.wikidata.org</a>
       </li>
       <li>
-        Import: Add Nepal Wikipedia. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_46" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a>
+        Import: Add Nepal Wikipedia. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_46" title="Dashboard/Import/Online">Dashboard/Import/Online</a>
       </li>
     </ul>
     <p>
@@ -2513,7 +2513,7 @@
     </p>
     <ul>
       <li>
-        Gui: Limit selection of dumps to files with .bz2 or .xml. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_50" title="Dashboard/Import/Offline" class="xowa-visited">Dashboard/Import/Offline</a>
+        Gui: Limit selection of dumps to files with .bz2 or .xml. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Offline.html" id="xolnki_50" title="Dashboard/Import/Offline">Dashboard/Import/Offline</a>
       </li>
       <li>
         Gui: Add "please wait" message when building SQLite indexes.
@@ -2577,7 +2577,7 @@
     </p>
     <ul>
       <li>
-        Import: Add new wikimedia org wikis. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_51" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a>
+        Import: Add new wikimedia org wikis. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_51" title="Dashboard/Import/Online">Dashboard/Import/Online</a>
       </li>
       <li>
         File: Download file if not available for offline database users.
