--- a/home/wiki/Diagnostics/Xtns/Wikia/All.html
+++ b/home/wiki/Diagnostics/Xtns/Wikia/All.html
@@ -61,7 +61,7 @@
           [[Main_Page]]
         </td>
         <td>
-          <a href="http://xowa.org/home/wiki/Main_Page.html" id="xolnki_2" title="Main Page" class="xowa-visited">Main_Page</a>
+          <a href="http://xowa.org/home/wiki/Main_Page.html" id="xolnki_2" title="Main Page">Main_Page</a>
         </td>
       </tr>
       <tr>
@@ -89,7 +89,7 @@
     </ul>
     <dl>
       <dd>
-        bgn_<i>B</i>_end
+        bgn_<i>C</i>_end
       </dd>
     </dl>
     <p>
